--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -14,6 +14,7 @@
       <div class="result_container">
         <h2 class="pizzas">Order About This Many Pizzas</h2>
         <div class="num">20</div>
+        <button class="start_over">Start over</button>
       </div>
       <div class="form_container">
         <form class="pizza_form" action="#">
@@ -21,7 +22,7 @@
             <h2>Number of Pizza Eaters</h2>
             <input type="text" placeholder="X" />
           </label>
-          <button type="submit">Enter</button>
+          <button class="submit" type="submit">Enter</button>
         </form>
       </div>
     </div>
