--- a/src/htdocs/iframe_test.html
+++ b/src/htdocs/iframe_test.html
@@ -9,11 +9,11 @@
 
   <body>
     <h1>Test frames</h1>
-    <div class="wide" style="width:640px">
-      <iframe src="./index.html" width="100%" height="300"></iframe>
+    <div class="wide" style="width:640px; height: 375px;">
+      <iframe src="./index.html" width="100%" height="355"></iframe>
     </div>
     <div class="mobile" style="width:320px">
-      <iframe src="./index.html" width="100%" height="300"></iframe>
+      <iframe src="./index.html" width="100%" height="355"></iframe>
     </div>
   </body>
 </html>
