--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -20,7 +20,7 @@
         <form class="pizza_form" action="#">
           <label>
             <h2>Number of Pizza Eaters</h2>
-            <input type="number" placeholder="0" />
+            <input type="number" pattern="\d*" placeholder="0" />
           </label>
           <button class="submit" type="submit">Enter</button>
         </form>
